// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createContactForm rejects if the server returns an error 2`] = `
{
  "delete": [],
  "get": [],
  "head": [],
  "link": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [
    {
      "allowAbsoluteUrls": true,
      "baseURL": "http://acme.gorgias.docker:4001",
      "data": "{"name":"test","default_locale":"en-US","email_integration":{"email":"a@a.com","id":1}}",
      "env": {
        "Blob": [Function],
        "FormData": [Function],
      },
      "headers": {
        "Accept": "application/json, text/plain, */*",
        "Content-Type": "application/json",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "post",
      "params": {},
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "transitional": {
        "clarifyTimeoutError": false,
        "forcedJSONParsing": true,
        "legacyInterceptorReqResOrdering": true,
        "silentJSONParsing": true,
      },
      "url": "/api/help-center/contact-forms",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "put": [],
  "unlink": [],
}
`;

exports[`createContactForm resolves with a created contact form on success 1`] = `
{
  "delete": [],
  "get": [],
  "head": [],
  "link": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [
    {
      "allowAbsoluteUrls": true,
      "baseURL": "http://acme.gorgias.docker:4001",
      "data": "{"name":"test","default_locale":"en-US","email_integration":{"email":"a@a.com","id":1}}",
      "env": {
        "Blob": [Function],
        "FormData": [Function],
      },
      "headers": {
        "Accept": "application/json, text/plain, */*",
        "Content-Type": "application/json",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "post",
      "params": {},
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "transitional": {
        "clarifyTimeoutError": false,
        "forcedJSONParsing": true,
        "legacyInterceptorReqResOrdering": true,
        "silentJSONParsing": true,
      },
      "url": "/api/help-center/contact-forms",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "put": [],
  "unlink": [],
}
`;

exports[`createPageEmbedment rejects if the server returns an error 2`] = `
{
  "delete": [],
  "get": [],
  "head": [],
  "link": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [
    {
      "allowAbsoluteUrls": true,
      "baseURL": "http://acme.gorgias.docker:4001",
      "data": "{"page_external_id":"123456789","position":"TOP"}",
      "env": {
        "Blob": [Function],
        "FormData": [Function],
      },
      "headers": {
        "Accept": "application/json, text/plain, */*",
        "Content-Type": "application/json",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "post",
      "params": {},
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "transitional": {
        "clarifyTimeoutError": false,
        "forcedJSONParsing": true,
        "legacyInterceptorReqResOrdering": true,
        "silentJSONParsing": true,
      },
      "url": "/api/help-center/contact-forms/1/shopify-page-embedments",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "put": [],
  "unlink": [],
}
`;

exports[`createPageEmbedment resolves with a created page embedment on success 1`] = `
{
  "delete": [],
  "get": [],
  "head": [],
  "link": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [
    {
      "allowAbsoluteUrls": true,
      "baseURL": "http://acme.gorgias.docker:4001",
      "data": "{"page_external_id":"123456789","position":"TOP"}",
      "env": {
        "Blob": [Function],
        "FormData": [Function],
      },
      "headers": {
        "Accept": "application/json, text/plain, */*",
        "Content-Type": "application/json",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "post",
      "params": {},
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "transitional": {
        "clarifyTimeoutError": false,
        "forcedJSONParsing": true,
        "legacyInterceptorReqResOrdering": true,
        "silentJSONParsing": true,
      },
      "url": "/api/help-center/contact-forms/1/shopify-page-embedments",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "put": [],
  "unlink": [],
}
`;

exports[`getContactForms rejects if the server returns an error 2`] = `
{
  "delete": [],
  "get": [
    {
      "allowAbsoluteUrls": true,
      "baseURL": "http://acme.gorgias.docker:4001",
      "data": undefined,
      "env": {
        "Blob": [Function],
        "FormData": [Function],
      },
      "headers": {
        "Accept": "application/json, text/plain, */*",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "get",
      "params": {},
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "transitional": {
        "clarifyTimeoutError": false,
        "forcedJSONParsing": true,
        "legacyInterceptorReqResOrdering": true,
        "silentJSONParsing": true,
      },
      "url": "/api/help-center/contact-forms",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "head": [],
  "link": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [],
  "put": [],
  "unlink": [],
}
`;

exports[`getContactForms resolves with a list of contact forms on success 1`] = `
{
  "delete": [],
  "get": [
    {
      "allowAbsoluteUrls": true,
      "baseURL": "http://acme.gorgias.docker:4001",
      "data": undefined,
      "env": {
        "Blob": [Function],
        "FormData": [Function],
      },
      "headers": {
        "Accept": "application/json, text/plain, */*",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "get",
      "params": {},
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "transitional": {
        "clarifyTimeoutError": false,
        "forcedJSONParsing": true,
        "legacyInterceptorReqResOrdering": true,
        "silentJSONParsing": true,
      },
      "url": "/api/help-center/contact-forms",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "head": [],
  "link": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [],
  "put": [],
  "unlink": [],
}
`;

exports[`getPageEmbedments rejects if the server returns an error 2`] = `
{
  "delete": [],
  "get": [
    {
      "allowAbsoluteUrls": true,
      "baseURL": "http://acme.gorgias.docker:4001",
      "data": undefined,
      "env": {
        "Blob": [Function],
        "FormData": [Function],
      },
      "headers": {
        "Accept": "application/json, text/plain, */*",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "get",
      "params": {},
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "transitional": {
        "clarifyTimeoutError": false,
        "forcedJSONParsing": true,
        "legacyInterceptorReqResOrdering": true,
        "silentJSONParsing": true,
      },
      "url": "/api/help-center/contact-forms/1/shopify-page-embedments",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "head": [],
  "link": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [],
  "put": [],
  "unlink": [],
}
`;

exports[`getPageEmbedments resolves with a list of page embedments on success 1`] = `
{
  "delete": [],
  "get": [
    {
      "allowAbsoluteUrls": true,
      "baseURL": "http://acme.gorgias.docker:4001",
      "data": undefined,
      "env": {
        "Blob": [Function],
        "FormData": [Function],
      },
      "headers": {
        "Accept": "application/json, text/plain, */*",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "get",
      "params": {},
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "transitional": {
        "clarifyTimeoutError": false,
        "forcedJSONParsing": true,
        "legacyInterceptorReqResOrdering": true,
        "silentJSONParsing": true,
      },
      "url": "/api/help-center/contact-forms/1/shopify-page-embedments",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "head": [],
  "link": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [],
  "put": [],
  "unlink": [],
}
`;

exports[`getShopifyPages rejects if the server returns an error 2`] = `
{
  "delete": [],
  "get": [
    {
      "allowAbsoluteUrls": true,
      "baseURL": "http://acme.gorgias.docker:4001",
      "data": undefined,
      "env": {
        "Blob": [Function],
        "FormData": [Function],
      },
      "headers": {
        "Accept": "application/json, text/plain, */*",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "get",
      "params": {},
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "transitional": {
        "clarifyTimeoutError": false,
        "forcedJSONParsing": true,
        "legacyInterceptorReqResOrdering": true,
        "silentJSONParsing": true,
      },
      "url": "/api/help-center/contact-forms/1/shopify-pages",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "head": [],
  "link": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [],
  "put": [],
  "unlink": [],
}
`;

exports[`getShopifyPages resolves with a list of shopify pages on success 1`] = `
{
  "delete": [],
  "get": [
    {
      "allowAbsoluteUrls": true,
      "baseURL": "http://acme.gorgias.docker:4001",
      "data": undefined,
      "env": {
        "Blob": [Function],
        "FormData": [Function],
      },
      "headers": {
        "Accept": "application/json, text/plain, */*",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "get",
      "params": {},
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "transitional": {
        "clarifyTimeoutError": false,
        "forcedJSONParsing": true,
        "legacyInterceptorReqResOrdering": true,
        "silentJSONParsing": true,
      },
      "url": "/api/help-center/contact-forms/1/shopify-pages",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "head": [],
  "link": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [],
  "put": [],
  "unlink": [],
}
`;
